--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Garamond", serif;
-  background: url("https://wallpapercave.com/wp/wp12340529.jpg") no-repeat
+  background: url("../assets/background_01.jpg") no-repeat
     center center fixed;
   background-size: cover;
   margin: 0;
